--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "framer-motion": "^4",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "framer-motion": "^6.5.1",
+    "next": "12.3.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@types/node": "^17.0.21",
-    "@types/react": "17.0.15",
+    "@types/react": "^18.3.12",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
-    "eslint-config-next": "11.0.1",
+    "eslint-config-next": "12.3.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
-    "typescript": "4.3.5"
+    "typescript": "^4.9.5"
   }
 }
